#101: fix alignment of register page section

--- a/assets/css/sass/content/pages/_register.scss
+++ b/assets/css/sass/content/pages/_register.scss
@@ -3,7 +3,7 @@
 	&.section-content {
 		background: $gray_base;
 		color: #FFF;
-		margin: 0;
+		margin: 0 auto;
 		padding-top: 1.5em;
 		padding-bottom: 3.5em;
 	}
