--- a/assets/css/worldstrides.css
+++ b/assets/css/worldstrides.css
@@ -8442,7 +8442,7 @@ section:after {
 .register.section-content {
   background: #323c53;
   color: #FFF;
-  margin: 0;
+  margin: 0 auto;
   padding-top: 1.5em;
   padding-bottom: 3.5em; }
 
